# jbigkit

./: CMakeLists.txt  Makefile.original
libjbig/: Makefile
